სტილების მინიჭება ჯამური

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SKY Project</title>
+	<link rel="stylesheet" type="text/css" href="styling.css">
 </head>
 <body>
 	<header>
@@ -11,13 +12,13 @@
 			<img class="logo" src="pictures/Logo.svg" alt="logo with text:sky house" >
 		</a>
 		<nav>
-			<ul class="header_ul">
-				<li> <a href="link2"> მთავარი </a> </li>
-				<li> <a href="link3"> ჩვენს შესახებ </a> </li>
-				<li> <a href="link4"> სერვისები </a> </li>
-				<li> <a href="link5"> პროექტები </a> </li>
-				<li> <a href="link6"> პარტნიორები </a> </li>
-				<li class = "contact1" ><a href="link7"> კონტაქტი </a> </li>
+			<ul class="list">
+				<li class="links" ><a href="link"> მთავარი </a> </li>
+				<li class="links" > <a href="link"> ჩვენს შესახებ </a> </li>
+				<li class="links" > <a href="link"> სერვისები </a> </li>
+				<li class="links" > <a href="link"> პროექტები </a> </li>
+				<li class="links" > <a href="link"> პარტნიორები </a> </li>
+				<li class = "contact1"> <a href="link7"> კონტაქტი </a> </li>
 			</ul>
 		</nav>
 	</header>
@@ -27,14 +28,14 @@
 			<p class="black_text"> რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი? </p>
 		</div>
 	</section>
-	<section>
+	<section class="office_pictures">
 		<img class="office.photo1" src="pictures/rectangle 92.png" alt="rectangel office">
 		<img class="office.photo2" src="pictures/rectangle 93.png" alt="balcony office">
 		<img class="office.photo3" src="pictures/rectangle 94.png" alt="office view from outside">
 		<img class="office.photo4" src="pictures/rectangle 95.png" alt="office view from outside">
 		<img class="office.photo5" src="pictures/rectangle 96.png" alt="high office">
 	</section>
-	<div>
+	<div class="Par">
 		<p class="P1" >
 			ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
 		</P>
@@ -49,4 +50,3 @@
 		დამატებითი ინფორმაცია
 	</button>
 </body>
-</html>
